# pose-smoothness-benchmark-mlops

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
src/features/: feature_builder.py
src/io/: helpers_load_xsens.py  load_gopro_pose.py  load_vicon.py  load_xsens.py  schemas.py
src/pipelines/: compare_sources.py  prepare_dataset.py
tests/: test_load_xsens.py
