[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pose-smoothness-benchmark-mlops"
version = "0.1.0"
description = "Pose smoothness benchmark MLOps pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.4.3",
    "pandas==3.0.1",
    "matplotlib==3.10.8",
    "scipy==1.17.1"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]